# metaflow-optuna

./: .gitignore  LICENSE  README.md  pyproject.toml  spec-metaflow-optuna.md
.github/workflows/: publish.yml
examples/: sklearn_tuning.py
metaflow_optuna/: __init__.py  decorators.py  exceptions.py  rendezvous.py  study.py  trial.py
metaflow_optuna/cards/: __init__.py  study_card.py
metaflow_optuna/coordinator/: __init__.py  app.py
tests/: test_study.py
